applications/echo/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: echo
    spec:
      volumes:
        - name: test
          persistentVolumeClaim:
            claimName: echo
      containers:
        - image: "mendhak/http-https-echo:31"
          imagePullPolicy: IfNotPresent
          name: echo
          resources:
            limits:
              cpu: '0.1'
              memory: 50Mi
            requests:
              ephemeral-storage: 4Gi
              cpu: '0.1'
              memory: 50Mi
          volumeMounts:
            - mountPath: "/mnt/test"
              name: test
      restartPolicy: Always
